--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,226 @@
-/* Your Website Styles */
+/* Set Your Own Margin & Padding */
+h2, h3, p {
+  margin: 0;
+}
 
+/* Layout for Style Tile*/
+section {
+  margin: 20px 0;
+}
+
+.color-1,
+.color-2,
+.color-3,
+.pattern-1,
+.pattern-2,
+.pattern-3 {
+  border: 1px solid #000;
+  float: left;
+  height: 50px;
+  width: 50px;
+}
+
+/* General Style */
+
+nav {
+  position: fixed;
+  background: #DADADA;
+  width: 100%;
+}
+
+nav ul li {
+  float: left;
+}
+
+nav ul li a:link {
+  color: #35C160;
+  background: #EBEBEB;
+  border: solid 1px #C9C9C9;
+  margin: 0 40px;
+  padding: 0 50px;
+  text-decoration: none;
+}
+
+nav ul li a:visited {
+  color: #35C160;
+  border: solid 1px #C9C9C9;
+}
+
+nav ul li a:hover {
+  background: #DADADA;
+}
+
+body {
+	background: #2DA250;
+	font-size: 0.625em;
+	font-family: 'Archivo Narrow', sans-serif;
+  display: inline;
+}
+
+body > div {
+	background: #DADADA;
+	border: solid 1em #35C160;
+	border-radius: 1em 1em 0.5em 0.5em;
+	width: 50%;
+	margin: 120px 0 2% 20%;
+	padding: 3%;
+}
+
+h1 {
+	color: #2DA250;
+	font-size: 3.2em;
+}
+
+h2 {
+	color: #35C160;
+	font-size: 2.8em;
+}
+
+h3 {
+	color: #484848;
+	font-size: 2.0em;
+}
+
+p {
+	color: black;
+	font-size: 1.6em;
+}
+
+em {
+	color: black;
+	font-size: 1.4em;
+}
+
+li em {
+	font-size: 1em;
+}
+
+ul h3 {
+	text-indent: -1.9em;
+}
+
+li {
+	font-size: 1.6em;
+	list-style: none;
+	text-indent: -0.5em;
+	line-height: 1.5em;
+}
+
+section,
+header,
+footer {
+	width: 80%;
+	margin: 5%;
+}
+
+img {
+	border: solid 0.5em #35C160;
+	border-radius: 1em 1em 0.5em 0.5em;
+	width: 22.5%;
+	margin: 0 5%;
+	float: right;
+}
+
+a:link {
+	color: #35C160;
+	font-size: 1.6em;
+}
+
+a:visited {
+	color: #2DA250;
+	font-size: 1.6em;
+}
+
+p a:link {
+	font-size: 1em;
+}
+
+p a:visited {
+	font-size: 1em;
+}
+
+li a:link {
+	font-size: 1em;
+}
+
+.color-1 {
+  background: #DADADA;
+}
+
+.color-2 {
+  background: #35C160;
+}
+
+.color-3 {
+  background: #2DA250;
+}
+
+.pattern-1 {
+  background: url("../img/old_map.png") no-repeat;
+}
+
+.pattern-2 {
+  background: url("../img/subtle_grunge.png") no-repeat;
+}
+
+.pattern-3 {
+  background: url("../img/green_cup.png") no-repeat;
+}
 
 /* Show Grid */
 .showgrid {
-	background: url("../img/grid-bg.png") repeat-y;
+  background: url("../img/grid-bg.png") repeat-y;
+}
+
+section + section + section {
+  padding: 20px;
+}
+
+section > div + em {
+  font-size: 1em;
+}
+
+/* Media Rules */
+
+/* General Media Styling */
+
+@media screen and (max-width: 970px){
+  img {
+		float: none;
+		width: 30%;
+	}
+
+	section {
+		width: 80%;
+	}
+}
+
+@media screen and (max-width: 560px){
+  nav ul li {
+    float: none;
+  }
+
+  nav ul li a:link {
+    padding: 0 20px;
+    margin: 0;
+  }
+
+  body > div {
+    margin: 120px 0 0;
+    width: 80%;
+  }
+
+	img {
+		float: none;
+		width: 50%;
+	}
+
+	section {
+		width: 90%;
+	}
+
+  .color-1, .color-2, .color-3, .pattern-1, .pattern-2, .pattern-3 {
+    height: 25px;
+    width: 25px;
+  }
 }
