--- a/css/styles.css
+++ b/css/styles.css
@@ -4,35 +4,98 @@ h1 {
   display: inline-block;
 }
 
+h1.right a {
+    color: lightgreen;
+    text-decoration: none;
+}
+
+h1.right a:visited {
+    color: green;
+}
+
 div#desk-nav {
     padding: 0 5%;
     width: 90%;
 }
 
 div#desk-nav a div {
+    color: #222222;
     background-color: #EFEFEF;
     width: 24%;
     margin: 0;
-    padding: 0.8em 0;
+    padding: 0.4em 0;
     display: inline-block;
     text-align: center;
+    text-decoration: none;
+    font-size: 1.5em;
+}
+
+div#desk-nav a div:hover {
+    color: #35C160;
+}
+
+div.download {
+    color: #222222;
+    margin: 0 0 -5em -0.5em;
+    padding: 0.5em;
+    display: inline-block;
+    border-top: solid 0.25em #35C160;
+    border-left: solid 0.25em #35C160;
+    border-right: solid 0.25em #35C160;
+    border-radius: 0;
+    width: 10em;
+    text-align: center;
+    text-decoration: none;
+}
+
+div.download:hover {
+    background-color: #E0E0E0;
+    color: #35C160;
+}
+
+div.links a:first-child div.download {
+    margin: 0 0 -5em -1em;
+    border-left: none;
+}
+
+div.links a:last-child div.download {
+    border-radius: 0 1em 0 0;
+    border-right: solid 0.25em #35C160;
 }
 
 body {
     background-color: #222222;
 }
 
+p.center {
+    text-align: center;
+}
+
 .article {
     padding: 0 10%;
 }
 
-.main-container {
+.container {
   background-color: #EFEFEF;
   border: solid 0.25em #35C160;
   border-radius: 0.5em 0em;
   margin: 1em;
-  padding: 1em;
+  padding: 1em 1em 0.5em;
   clear: both;
+}
+
+article img {
+    margin: -1em -1em 1em 1em;
+    border-left: solid 0.25em #35C160;
+    border-bottom: solid 0.25em #35C160;
+    height: 10em;
+    width: 15em;
+    max-width: 180px;
+    float: right;
+}
+
+section {
+    clear: left;
 }
 
 nav.border {
@@ -85,6 +148,34 @@ nav.border {
         font-size: 1.5em;
     }
 
+    div#desk-nav a div {
+        font-size: 1em;
+    }
+
+    div.links {
+        display: block;
+        clear: both;
+        margin: -0.5em -1em;
+    }
+
+    div.download {
+        border: none;
+        clear:both;
+        width: 100%;
+        margin: 0;
+        padding: 0.25em 0;
+        border-top: 0.2em solid #35C160;
+        text-decoration: none;
+    }
+
+    div.links a:first-child div.download {
+        margin: 0;
+    }
+
+    div.links a:last-child div.download {
+        border-right: none;
+        border-radius: 0 0 1em 0;
+    }
 }
 
 @media screen and (max-width: 560px){
@@ -95,14 +186,22 @@ nav.border {
       text-align: center;
   }
 
+  h2 {
+      text-align: center;
+  }
+
+  div.container img {
+      text-align: center;
+      margin: 0 10%;
+      height: 10%;
+      width: 80%;
+      max-height: 18em;
+      max-width: 80%;
+  }
+
   .article {
     padding: 0;
     font-size: small;
-  }
-
-  .color-1, .color-2, .color-3, .pattern-1, .pattern-2, .pattern-3 {
-    height: 25px;
-    width: 25px;
   }
 
   nav.border {
